# thinmint

./: CHECKPOINTS.md  CMakeLists.txt  ENGINE_PLAN.md  LOGGING.md  OPENCODE.md  PROGRESS.md  README.md  SPRINT.02.legal-movegen.json  SPRINT.03.uci-search.json  SPRINT.04.strength-stability.json  SPRINT.json  opencode.json
include/thinmint/board/: README.md  board.h  makemove.h  unmakemove.h
include/thinmint/core/: bitboard.h  move.h  piece.h  square.h  version.h
include/thinmint/eval/: eval.h
include/thinmint/movegen/: README.md  attacks.h  movegen.h
include/thinmint/perft/: perft.h
include/thinmint/search/: README.md  search.h
include/thinmint/uci/: README.md  protocol.h
scripts/: opencode-loop.sh  verify.sh
src/: main.cpp
src/board/: README.md  board.cpp  makemove.cpp  unmakemove.cpp
src/core/: bitboard.cpp  move.cpp  piece.cpp  square.cpp  version.cpp
src/eval/: eval.cpp
src/movegen/: README.md  attacks.cpp  movegen.cpp
src/perft/: perft.cpp
src/search/: README.md  search.cpp
src/uci/: README.md  protocol.cpp
tests/perft/: README.md
tests/unit/: bitboard_test.cpp  board_test.cpp  castling_ep_test.cpp  check_detection_test.cpp  eval_test.cpp  fen_test.cpp  iterative_deepening_test.cpp  knight_king_attacks_test.cpp  legal_movegen_test.cpp  make_unmake_stress_test.cpp  makemove_test.cpp  move_test.cpp  pawn_attacks_test.cpp  perft_test.cpp  piece_test.cpp  pseudolegal_movegen_test.cpp  search_test.cpp  sliding_attacks_test.cpp  smoke_test.cpp  square_test.cpp  tactical_regression_test.cpp  uci_go_test.cpp  uci_position_test.cpp  uci_protocol_test.cpp  unmakemove_test.cpp
